--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,6 +1,7 @@
 body {
     overflow: hidden;
     background-color: black;
+    font-family: 'Aldrich', sans-serif;
 }
 
 #speedometer {
@@ -32,4 +33,37 @@ body {
     left: 200px;
     height: 150px;
     z-index: 1;
+}
+
+#clock {
+    color: white;
+    font-weight: bold;
+    font-size: 40px;
+    position: absolute;
+    top: -17px;
+    left: -17px;
+    padding-left: 30px;
+    padding-top: 30px;
+    border: 4px solid #0088ff;
+    border-radius: 18px;
+    border-top: 0;
+    border-left: 0;
+    padding-bottom: 6px;
+    padding-right: 10px;
+}
+
+#speed {
+    color: white;
+    font-weight: bold;
+    font-size: 60px;
+    position: absolute;
+    bottom: 0px;
+    right: 20px;
+    z-index: 20;
+}
+
+#speed small {
+    font-weight: normal;
+    font-size: 30px;
+    margin-left: 5px;
 }
