--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Aldrich';
-    src: url('../fonts/aldrich.woff2') format('woff2');
+    src: url('/assets/fonts/aldrich.woff2') format('woff2');
 }  
 
 body {
