--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,18 @@
     src: url('/assets/fonts/aldrich.woff2') format('woff2');
 }  
 
+#connectionsign {
+    filter: invert(100%);
+    position: absolute;
+    top: 13px;
+    left: 12px;
+    width: 29px;
+}
+
+.hidden {
+    display: none;
+}
+
 body {
     overflow: hidden;
     background-color: black;
@@ -46,7 +58,7 @@ body {
     font-size: 40px;
     position: absolute;
     top: -17px;
-    left: -17px;
+    left: 24px;
     padding-left: 30px;
     padding-top: 30px;
 }
@@ -80,7 +92,7 @@ body {
     z-index: 25;
 }
 
-#oilpressure {
+#coolanttemp {
     position: absolute;
     right: -120px;
     bottom: 55px;
@@ -90,7 +102,7 @@ body {
     left: -120px;
     bottom: 55px;
 }
-#oilpressureicon {
+#coolanttempicon {
     position: absolute;
     right: 13px;
     bottom: 215px;
