--- a/templates/index.html
+++ b/templates/index.html
@@ -7,16 +7,18 @@
     <body>
         <div id="clock">18:15</div>
         <div id="speed">120<small>km/h</small></div>
+        <img id="connectionsign" class="hidden" src="/assets/img/connection.png">
         <img id="road" src="/assets/img/road.png">
         <img id="vwlogo" src="/assets/img/vw_logo.png">
         <img id="t4image" src="/assets/img/t4.png">
         <img id="fuelicon" src="/assets/img/fuel.png">
-        <img id="oilpressureicon" src="/assets/img/oil.png">
+        <img id="coolanttempicon" src="/assets/img/coolant.png">
         <img id="oiltempicon" src="/assets/img/oil.png">
         <canvas id="speedometer" ></canvas>
         <canvas id="fuellevel"></canvas>
-        <canvas id="oilpressure"></canvas>
+        <canvas id="coolanttemp"></canvas>
         <canvas id="oiltemp"></canvas>
+        <script src="/assets/js/socket.io.js"></script>
         <script src="/assets/js/jquery-3.5.0.slim.min.js"></script>
         <script src="/assets/js/gauge.min.js"></script>
         <script src="/assets/js/cargauge.js"></script>
