--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
         <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
     </head>
     <body>
-        <div id="clock">18:15</div>
-        <div id="speed">120<small>km/h</small></div>
+        <div id="clock"></div>
+        <div id="speed"><span id="speedtext">0</span><small>km/h</small></div>
         <img id="connectionsign" class="hidden" src="/assets/img/connection.png">
         <img id="road" src="/assets/img/road.png">
         <img id="vwlogo" src="/assets/img/vw_logo.png">
